# datakit-github

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
datakit_github/: __init__.py  github_api.py  project_mixin.py  repository.py
datakit_github/commands/: __init__.py  integrate.py
docs/: Makefile  conf.py  datakit_github.commands.rst  datakit_github.rst  index.rst  install.rst  make.bat  modules.rst  usage.rst
tests/: conftest.py  test_github_api.py  test_repository.py
tests/cassettes/: test_accounts.yaml
tests/commands/: test_integrate.py  test_integrate_basic.py
tests/commands/cassettes/: test_choose_default_account.yaml  test_choose_default_account_basic.yaml  test_choose_org_account_private_error.yaml  test_choose_org_account_public_repo.yaml  test_repo_already_exists.yaml  test_repo_already_exists_org_account.yaml  test_repo_already_initialized.yaml  test_return_chosen_inputs.yaml
