[build-system]
requires = ["uv-build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[project]
name = "datakit-github"
version = "0.3.1"
description = "Light-weight GitHub integration for datakit workflows."
authors = [
    {name = "Larry Fenn", email = "lfenn@ap.org"},
]
license = {text = "ISC"}
keywords = ["datakit"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cliff",
    "datakit-core>=0.5.0",
    "PyGithub",
]

[project.urls]
Homepage = "https://github.com/associatedpress/datakit-github"
Source = "https://github.com/associatedpress/datakit-github"
Tracker = "https://github.com/associatedpress/datakit-github/issues"

[project.entry-points."datakit.plugins"]
"github integrate" = "datakit_github.commands:Integrate"

[dependency-groups]
dev = [
    "bumpversion",
    "coverage",
    "ruff",
    "pytest",
    "pytest-vcr",
    "Sphinx",
    "tox",
    "tox-uv",
    "watchdog",
]

[tool.uv.build-backend]
module-root = ""

[tool.tox]
env_list = ["py310", "py311", "py312", "py313"]

[tool.tox.env_run_base]
dependency_groups = ["dev"]
commands = [["pytest", "--vcr-record=none", "{posargs}"]]

[tool.ruff]
line-length = 130
exclude = ["docs", "datakit_github/__init__.py"]

[tool.ruff.lint.per-file-ignores]
"datakit_github/commands/__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests/"]
log_level = "INFO"
addopts = "--vcr-record=none"
